--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 server.port=80
 
-#My SQL ??
+#My SQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/example?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1219
 
