--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.hibernate.ddl-auto=create
 #???? ? ??? ?
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#?? ?? ????
+#spring.devtools.livereload.enable=true
+
